--- a/css/navbar-footer.css
+++ b/css/navbar-footer.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Yaldevi&display=swap');
 
 /* ==============================Nav bar =============================== */
-
+h1,h2,h3,h4,h5{
+    overflow: hidden;
+}
 * {
     margin: 0;
     padding: 0;
